2008-03-21  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
	* src/dvbcut.cpp:
		Windows compile fixes.
		
2008-03-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp:
		Accept 0x80 as legacy video descriptor tag.

2008-03-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Add hack for filenames with colons in them.

2008-03-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
		Always define __STDC_CONSTANT_MACROS and __STDC_LIMIT_MACROS.

	* src/buffer.cpp:
		Remove obsolete definition of __STDC_LIMIT_MACROS.

	* src/mpgfile.cpp:
	* src/psfile.cpp:
	* src/tsfile.cpp:
		Avoid stupid compiler warnings.

2008-02-17  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
		Always add a trailing slash to directory names.

2008-02-15  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/main.cpp:
		Add "-voracious" option for people who have several
		gigabytes of cache and want dvbcut to use all of it.

2008-02-15  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/settings.cpp:
		Added "versioned" config file and format adaption.

2008-02-10  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
	* src/settings.cpp:
	* src/settings.h:
		Fixed bug with 'lastdir' & toplevel directories 
		under Windows and implemented possibility to use 
		a fixed 'lastdir'.
		Added *.trp to recognized files.

2008-02-04  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
		Install manpages to $PREFIX/share/man.

	* src/dvbcut.cpp:
	* src/tsfile.cpp:
		#include <algorithm>.

2008-01-16  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/psfile.cpp:
		Speed up PS probing.

2008-01-06  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcutbase.ui:
	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/settings.cpp:
	* src/settings.h:
		Automated setting of equidistant chapter markers.